unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/Service_Appointment_Creation_Event__e.object-meta.xml
<CustomObject>
    <description>Platform even to capture attributes for a Service Appointment</description>
    <label>Service Appointment Creation Event</label>
    <pluralLabel>Service Appointment Creation Event</pluralLabel>
</CustomObject>