unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Call_External_Id__c.field-meta.xml
<CustomField>
    <fullName>Call_External_Id__c</fullName>
    <label>Call External Id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>