unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Facility_Number__c.field-meta.xml
<CustomField>
    <fullName>Facility_Number__c</fullName>
    <label>Facility Number</label>
    <length>20</length>
    <type>Text</type>
</CustomField>