unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Phone_Number__c</fullName>
    <label>Phone Number</label>
    <length>18</length>
    <type>Text</type>
</CustomField>