unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/PTA__c.field-meta.xml
<CustomField>
    <fullName>PTA__c</fullName>
    <label>PTA</label>
    <type>DateTime</type>
</CustomField>