unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Service_Address_City__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_City__c</fullName>
    <label>Service Address City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>