unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Service_Address_PostalCode__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_PostalCode__c</fullName>
    <label>Service Address PostalCode</label>
    <length>10</length>
    <type>Text</type>
</CustomField>