unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Service_Address_StateCode__c.field-meta.xml
<CustomField>
    <fullName>Service_Address_StateCode__c</fullName>
    <label>Service Address StateCode</label>
    <length>5</length>
    <type>Text</type>
</CustomField>