unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Service_Appointment_Street__c.field-meta.xml
<CustomField>
    <fullName>Service_Appointment_Street__c</fullName>
    <label>Service Appointment Street</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>