unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/SMS_Opt_In__c.field-meta.xml
<CustomField>
    <fullName>SMS_Opt_In__c</fullName>
    <label>SMS Opt-In</label>
    <length>10</length>
    <type>Text</type>
</CustomField>