unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Tow_Destination__c.field-meta.xml
<CustomField>
    <fullName>Tow_Destination__c</fullName>
    <label>Tow Destination</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>