unpackaged/main/default/objects/Service_Appointment_Creation_Event__e/fields/Truck_Type__c.field-meta.xml
<CustomField>
    <fullName>Truck_Type__c</fullName>
    <label>Truck Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>